--- a/client/src/components/Breed/Breed.css
+++ b/client/src/components/Breed/Breed.css
@@ -46,6 +46,7 @@ border-top-right-radius:12px;
     width: 520px;
 }
 #idDivBreedDetail{
+    text-align: center;
     position: relative;
     bottom: 0.6px;
     width: 99.67%;
@@ -66,7 +67,9 @@ border-top-right-radius:12px;
 }
 
 .classPBreed{
-font-size: 17px;
-margin-top: 1px;
-margin-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    font-size: 17px;
+    margin-top: 1px;
+    margin-bottom: 10px;
 }
