--- a/client/src/components/Breed/Breed.css
+++ b/client/src/components/Breed/Breed.css
@@ -11,8 +11,11 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    height: 500px;
+    height: 510px;
+    width:520px;
+    left: 520px;
     padding-bottom: 100px;
+    margin-top: 30px;
 }
 #idImgBreed{
     width: 120px;
@@ -27,7 +30,7 @@
 #idImageBreed{
 object-fit: cover;
 width: 100%;
-height: 100%;
+height: 67.8%;
 border-top-left-radius: 12px;
 border-top-right-radius:12px;
 }
@@ -36,8 +39,17 @@ border-top-right-radius:12px;
     box-shadow: 0px 0px 10px 0.5px grey;
     display: flex;
     flex-direction: column;
-    width: 520px;
-    height: 620px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    object-fit: cover;
+    width: 100%;
+    height: 120%;
+    background-color: cyan;
+    position: relative;
+    top: 0px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 #idDivImageBreed{
     position: relative;
