--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -37,3 +37,21 @@
 #idDivCardsOrigin{
     height: 1140px;
 }
+#id_not_found{
+    font-size: 38px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+#id_not_found_img{
+    position: relative;
+    width: 53%;
+    height: 53%;
+    border-radius: 47%;
+}
+#div_id_not_found{
+    display: flex;
+    position: relative;
+    left: 225px;
+    top: 5px;
+    flex-direction: column;
+    align-items: center;
+}
