--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -30,10 +30,6 @@
     left: 2px;
     font-size: 25px;
 }
-#linkBreedId{
-    text-decoration: none;
-    color:cyan;
-}
 #idDivCardsOrigin{
     height: 1140px;
 }
@@ -54,4 +50,170 @@
     top: 5px;
     flex-direction: column;
     align-items: center;
+}
+
+/*/////////////////////////////////////*/
+
+
+@media screen and (min-width: 768px){
+    #div_id_not_found{
+        display: flex;
+        position: relative;
+        left: 0px;
+        top: 5px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #id_not_found{
+        font-size: 30px;
+    }
+    #id_not_found_img{
+        position: relative;
+        width: 43%;
+        height: 30%;
+        border-radius: 47%;
+    }
+
+
+    #idDivH1Load{
+        display: flex;
+        position: relative;
+        left: 205px;
+        top: 150px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .classDivCardCards{
+        position: relative;
+        bottom:220px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 30px;
+        padding-right:0px ;
+        padding-top: 30px;
+        width: 75%;
+        height: 100%; 
+        left: 1px;   
+    }
+    #idDivCardsOrigin{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 870px;
+    }
+    .classCardCards{
+        padding: 10px;
+    }  
+}
+@media screen and (min-width: 1024px) {
+    #idDivH1Load{
+        display: flex;
+        position: relative;
+        left: 465px;
+        top: 150px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .classDivCardCards{
+        position: relative;
+        bottom:240px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 30px;
+        padding-right:0px ;
+        padding-top: 30px;
+        width: 83%;
+        height: 100%; 
+        left: 0px;   
+    }
+    #idDivCardsOrigin{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 870px;
+    }
+    .classCardCards{
+        padding: 10px;
+    }
+
+}
+@media screen and (min-width: 1366px){
+    .classDivCardCards{
+    position: relative;
+    bottom:240px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    padding-left: 30px;
+    padding-right:0px ;
+    padding-top: 30px;
+    width: 72%;
+    left: -30px;    
+}
+#idDivCardsOrigin{
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    height: 1050px;
+}
+}
+@media screen and (min-width: 1536px){
+    .classDivCardCards{
+        position: relative;
+        bottom:240px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 30px;
+        padding-right:0px ;
+        padding-top: 20px;
+        width: 70%;
+        left: 150px;    
+    }
+    .classCardCards{
+        padding: 15px;
+    }
+    #idDivH1Load{
+        display: flex;
+        position: relative;
+        left: 465px;
+        top: 150px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #idImgCards{
+        height: 110px;
+    }
+    #idH1Cards{
+        position: relative;
+        top: -18px;
+        left: 2px;
+        font-size: 25px;
+    }
+    #idDivCardsOrigin{
+        justify-content: center;
+        height: 100%;
+        height: 1050px;
+    }
+    #id_not_found{
+        font-size: 38px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    #id_not_found_img{
+        position: relative;
+        width: 53%;
+        height: 53%;
+        border-radius: 47%;
+    }
+    #div_id_not_found{
+        display: flex;
+        position: relative;
+        left: 225px;
+        top: 5px;
+        flex-direction: column;
+        align-items: center;
+    }
+     
 }
