--- a/client/src/components/CreateBreed/CreateBreed.css
+++ b/client/src/components/CreateBreed/CreateBreed.css
@@ -107,3 +107,330 @@ background-color: red;;
 #idDivContentTpSc{
     width: 510px;
 }
+
+/* //////////////////////// */
+
+
+@media screen and (min-width: 768px) {
+    .classwarning{
+        width: 450px;
+        height: 22px;
+        font-size: 12px;
+        color: red;
+        border:2px solid red;
+    }
+    .classForm{
+        width: 450px;
+        height: 20px;
+        font-size: 12px;
+        margin-top: 7px;
+        margin-bottom: 5px;
+        }
+        .classLabelForm{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size:16px;
+            color: rgb(0, 241, 241);
+            text-shadow: 1px 0px 1px black, -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black;
+        }
+        .classBtnForm{
+            border-radius: 15px;
+            background-color: rgb(3, 240, 240);
+            border:1px solid black ;
+            color:black;
+            width: 100px;
+            height: 30px;
+            font-size: 13px;
+            font-family: Arial, Helvetica, sans-serif;
+            transition: background-color .5s, color .3s, text-shadow .3s, font-size .6s;
+        }
+        #idH2Form{
+            font-size: 22px;
+            color: rgb(55, 55, 55);
+        }
+        .classDivTempCreated{
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-evenly;
+            flex-direction: row-reverse;
+            border: 1px solid black;
+            border-radius: 18px;
+            width: 118px;
+            height: 22px;
+            margin-left: 5px;
+            margin-right:  5px;
+            font-size: 12px;
+            background-color: rgb(255, 255, 255);
+        }
+        .classBtnCreated{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 15px;
+            height: 13px;
+            color: red;
+            background-color: white;
+            border: 1px solid red;
+            border-radius: 5px;
+            position: relative;
+            bottom: 2px;
+            font-size: 12px;
+            left: 0px;
+            transition: color .3s, background-color .5s;
+        }
+        #idDivContentTpSc{
+            width: 450px;
+        }
+        
+    }
+@media screen and (min-width: 1024px) {
+    .classwarning{
+        width: 450px;
+        height: 22px;
+        font-size: 12px;
+        color: red;
+        border:2px solid red;
+    }
+    .classForm{
+        width: 450px;
+        height: 20px;
+        font-size: 12px;
+        margin-top: 7px;
+        margin-bottom: 5px;
+        }
+        .classLabelForm{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size:16px;
+            color: rgb(0, 241, 241);
+            text-shadow: 1px 0px 1px black, -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black;
+        }
+        .classBtnForm{
+            border-radius: 15px;
+            background-color: rgb(3, 240, 240);
+            border:1px solid black ;
+            color:black;
+            width: 100px;
+            height: 30px;
+            font-size: 13px;
+            font-family: Arial, Helvetica, sans-serif;
+            transition: background-color .5s, color .3s, text-shadow .3s, font-size .6s;
+        }
+        #idH2Form{
+            font-size: 22px;
+            color: rgb(55, 55, 55);
+        }
+        .classDivTempCreated{
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-evenly;
+            flex-direction: row-reverse;
+            border: 1px solid black;
+            border-radius: 18px;
+            width: 118px;
+            height: 22px;
+            margin-left: 5px;
+            margin-right:  5px;
+            font-size: 12px;
+            background-color: rgb(255, 255, 255);
+        }
+        .classBtnCreated{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 15px;
+            height: 13px;
+            color: red;
+            background-color: white;
+            border: 1px solid red;
+            border-radius: 5px;
+            position: relative;
+            bottom: 2px;
+            font-size: 12px;
+            left: 0px;
+            transition: color .3s, background-color .5s;
+        }
+        #idDivContentTpSc{
+            width: 450px;
+        }
+        
+    }
+@media screen and (min-width: 1366px){
+ .classwarning{
+        width: 450px;
+        height: 22px;
+        font-size: 14px;
+        color: red;
+        border:2px solid red;
+    }
+    .classForm{
+        width: 450px;
+        height: 20px;
+        font-size: 14px;
+        margin-top: 7px;
+        margin-bottom: 5px;
+        }
+        .classLabelForm{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size:18px;
+            color: rgb(0, 241, 241);
+            text-shadow: 1px 0px 1px black, -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black;
+        }
+        .classBtnForm{
+            border-radius: 15px;
+            background-color: rgb(3, 240, 240);
+            border:1px solid black ;
+            color:black;
+            width: 100px;
+            height: 30px;
+            font-size: 14px;
+            font-family: Arial, Helvetica, sans-serif;
+            transition: background-color .5s, color .3s, text-shadow .3s, font-size .6s;
+        }
+        #idH2Form{
+            font-size: 23px;
+            color: rgb(55, 55, 55);
+        }
+        .classDivTempCreated{
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-evenly;
+            flex-direction: row-reverse;
+            border: 1px solid black;
+            border-radius: 18px;
+            width: 118px;
+            height: 22px;
+            margin-left: 5px;
+            margin-right:  5px;
+            font-size: 14px;
+            background-color: rgb(255, 255, 255);
+        }
+        .classBtnCreated{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 15px;
+            height: 13px;
+            color: red;
+            background-color: white;
+            border: 1px solid red;
+            border-radius: 5px;
+            position: relative;
+            bottom: 2px;
+            font-size: 14px;
+            left: 0px;
+            transition: color .3s, background-color .5s;
+        }
+        #idDivContentTpSc{
+            width: 450px;
+        }
+    }
+@media screen and (min-width: 1536px) {
+        .classDivForm{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .classwarning{
+            width: 500px;
+            height: 25px;
+            font-size: 15px;
+            color: red;
+            border:2px solid red;
+        }
+        .classSpanWarning{
+        color: red;
+        }
+        .classForm{
+        width: 500px;
+        height: 25px;
+        font-size: 17px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        }
+        .classDivSpan{
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+        }
+        .classBtnWarning{
+            visibility: hidden;
+        }
+        .classLabelForm{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size:22px;
+            color: rgb(0, 241, 241);
+            text-shadow: 1px 0px 1px black, -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black;
+        }
+        #idDivBtnForm{
+            padding: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .classBtnForm{
+            border-radius: 15px;
+            background-color: rgb(3, 240, 240);
+            border:1px solid rgb(8, 207, 207);
+            color:black;
+            width: 128px;
+            height: 37px;
+            font-size: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+            transition: background-color .5s, color .3s, text-shadow .3s, font-size .6s;
+        }
+        .classBtnForm:hover{
+            color:black;
+            transform:scale(1.02);
+            box-shadow: 0px 0px 0.5px 0.3px grey;
+        }
+        #idH2Form{
+            font-size: 32px;
+            color: rgb(55, 55, 55);
+        }
+        .classPaddingBtn{
+            padding: 20px;
+        }
+        #idH1Form{
+            position: fixed;
+            transition: visibility .5s ;
+            visibility: hidden;
+            color: rgb(230, 63, 63);
+        }
+        .classDivTempCreated{
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-evenly;
+            flex-direction: row-reverse;
+            border: 1px solid black;
+            border-radius: 18px;
+            width: 155px;
+            height: 30px;
+            margin-left: 5px;
+            margin-right:  5px;
+            background-color: rgb(255, 255, 255);
+        }
+        .classBtnCreated{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 17px;
+            height: 15px;
+            color: red;
+            background-color: white;
+            border: 1px solid red;
+            border-radius: 5px;
+            position: relative;
+            bottom: 2px;
+            left: 2px;
+            transition: color .3s, background-color .5s;
+        }
+        .classBtnCreated:hover{
+        color:white;
+        background-color: red;;
+        }
+        #idDivContentTpSc{
+            width: 510px;
+        }
+    }
