--- a/client/src/components/Breed/Breed.css
+++ b/client/src/components/Breed/Breed.css
@@ -88,6 +88,293 @@ border-top-right-radius:12px;
 /*///////////////////////*/
 
 
+@media screen and (min-width: 320px) {
+    #idDivBreed{
+        display: flex;
+        width: 100px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #idDivBreedKey{
+        display: flex;
+        position: relative;
+        top: 100px ;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height: 300px;
+        width:290px;
+        left: 15px;
+        padding-bottom: 100px;
+        margin-top: 30px;
+    }
+    #idImgBreed{
+        width: 120px;
+        height: 120px;
+    }
+    #idH1Breed{
+        position: relative;
+        top: -20px;
+        left: 6px;
+        font-size: 26px;
+    }
+    #idImageBreed{
+    position: relative;
+    bottom:1px;
+    object-fit: cover;
+    width: 100.2%;
+    height: 65%;
+    border-top-left-radius: 12px;
+    border-top-right-radius:12px;
+    }
+    #idDivDetailBreed{
+        border-radius: 9px;
+        box-shadow: 0px 0px 10px 0.5px grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        object-fit: cover;
+        width: 100%;
+        height: 120%;
+        background-color: cyan;
+        position: relative;
+        top: 0px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+    #idDivImageBreed{
+        position: relative;
+        top: -0.8px;
+        height: 1200px;
+        width: 520px;
+    }
+    #idDivBreedDetail{
+        text-align: center;
+        position: relative;
+        bottom: 0.6px;
+        width: 99.67%;
+        height: 100%;
+        display: flex;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius:10px;
+        align-items: center;
+        border-left: 1px solid rgb(0, 203, 203);
+        border-right:1px solid rgb(0, 203, 203) ;
+        border-bottom: 1px solid rgb(0, 203, 203) ;
+        flex-direction: column;
+        background-color: rgb(0, 241, 241);
+    }
+    #idH2Breed{
+        width: 100%;
+        height: 8%;
+        font-size: 20px;
+        margin: 2px;
+    }
+    
+    .classPBreed{
+        width: 100%;
+        height: 27%;
+        padding-right: 20px;
+        padding-left: 20px;
+        font-size: 13px;
+        margin-top: 1px;
+        margin-bottom: 5px;
+    }
+    
+}
+@media screen and (min-width: 375px) {
+    #idDivBreed{
+        display: flex;
+        width: 100px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #idDivBreedKey{
+        display: flex;
+        position: relative;
+        top: 100px ;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height: 390px;
+        width:350px;
+        left: 15px;
+        padding-bottom: 100px;
+        margin-top: 30px;
+    }
+    #idImgBreed{
+        width: 120px;
+        height: 120px;
+    }
+    #idH1Breed{
+        position: relative;
+        top: -20px;
+        left: 6px;
+        font-size: 30px;
+    }
+    #idImageBreed{
+    position: relative;
+    bottom:1px;
+    object-fit: cover;
+    width: 100.2%;
+    height: 65%;
+    border-top-left-radius: 12px;
+    border-top-right-radius:12px;
+    }
+    #idDivDetailBreed{
+        border-radius: 9px;
+        box-shadow: 0px 0px 10px 0.5px grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        object-fit: cover;
+        width: 100%;
+        height: 120%;
+        background-color: cyan;
+        position: relative;
+        top: 0px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+    #idDivImageBreed{
+        position: relative;
+        top: -0.8px;
+        height: 1200px;
+        width: 520px;
+    }
+    #idDivBreedDetail{
+        text-align: center;
+        position: relative;
+        bottom: 0.6px;
+        width: 99.67%;
+        height: 100%;
+        display: flex;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius:10px;
+        align-items: center;
+        border-left: 1px solid rgb(0, 203, 203);
+        border-right:1px solid rgb(0, 203, 203) ;
+        border-bottom: 1px solid rgb(0, 203, 203) ;
+        flex-direction: column;
+        background-color: rgb(0, 241, 241);
+    }
+    #idH2Breed{
+        width: 100%;
+        height: 8%;
+        font-size: 23px;
+    }
+    
+    .classPBreed{
+        width: 100%;
+        height: 27%;
+        padding-right: 20px;
+        padding-left: 20px;
+        font-size: 14px;
+        margin-top: 1px;
+        margin-bottom: 10px;
+    }
+    
+}
+
+@media screen and (min-width: 425px) {
+    #idDivBreed{
+        display: flex;
+        width: 100px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #idDivBreedKey{
+        display: flex;
+        position: relative;
+        top: 100px ;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height: 390px;
+        width:400px;
+        left: 10px;
+        padding-bottom: 100px;
+        margin-top: 30px;
+    }
+    #idImgBreed{
+        width: 120px;
+        height: 120px;
+    }
+    #idH1Breed{
+        position: relative;
+        top: -20px;
+        left: 6px;
+        font-size: 30px;
+    }
+    #idImageBreed{
+    position: relative;
+    bottom:1px;
+    object-fit: cover;
+    width: 100.2%;
+    height: 65%;
+    border-top-left-radius: 12px;
+    border-top-right-radius:12px;
+    }
+    #idDivDetailBreed{
+        border-radius: 9px;
+        box-shadow: 0px 0px 10px 0.5px grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        object-fit: cover;
+        width: 100%;
+        height: 120%;
+        background-color: cyan;
+        position: relative;
+        top: 0px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+    #idDivImageBreed{
+        position: relative;
+        top: -0.8px;
+        height: 1200px;
+        width: 520px;
+    }
+    #idDivBreedDetail{
+        text-align: center;
+        position: relative;
+        bottom: 0.6px;
+        width: 99.67%;
+        height: 100%;
+        display: flex;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius:10px;
+        align-items: center;
+        border-left: 1px solid rgb(0, 203, 203);
+        border-right:1px solid rgb(0, 203, 203) ;
+        border-bottom: 1px solid rgb(0, 203, 203) ;
+        flex-direction: column;
+        background-color: rgb(0, 241, 241);
+    }
+    #idH2Breed{
+        width: 100%;
+        height: 8%;
+        font-size: 23px;
+    }
+    
+    .classPBreed{
+        width: 100%;
+        height: 27%;
+        padding-right: 20px;
+        padding-left: 20px;
+        font-size: 14px;
+        margin-top: 1px;
+        margin-bottom: 10px;
+    }
+    
+}
 @media screen and (min-width: 768px) {
     #idDivBreed{
         display: flex;
