--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -106,19 +106,305 @@ font-size:30px;
     }
 
 /* ///////////////////////// */
-@media screen and (min-width: 768px){
+
+@media screen and (min-width: 320px){
     .classCard{
         color:cyan;
         background-color: white;
         display: inline-flex;
         flex-direction: column;
         align-items: center;
-        width: 250px;
-        height: 330px;
+        width: 180px;
+        height: 250px;
         border-radius: 5px;
         border: 1px solid rgb(180, 179, 179);
         transition: background-color .3s, box-shadow .4s, transform .5s;
         box-shadow: 0px 0px 5px 0.1px rgb(142, 142, 142);
+    }
+    #divImgCard{
+        margin-top: -15px;
+        border-top: 1px solid rgb(180, 179, 179);
+        width: 180.4px;
+        height: 120px;
+    } 
+    .classImgCard{
+        position: static;
+        width: 100%;
+        height: 100%;
+     }
+        .classCardName{
+            text-shadow: 1px 0px 1px black , -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black ;
+            position: relative;
+            top:-9px;
+            font-size: 13px;
+        }
+        #DivCardName{
+            display: flex;
+            position: relative;
+            justify-content: center;
+            top: -1px;
+            background-color:white;
+            width: 180px;
+            border-radius: 20px;
+            border-top-right-radius: 5px;
+            border-top-left-radius: 5px;
+            border: 1px solid rgb(180, 179, 179);
+            height:29px;
+        }
+        .classText{
+            padding: 5px 10px 5px 10px;
+            text-align: center;
+            color: rgb(39, 39, 39);
+            font-size:11px ;
+        }
+
+        .classLikeCards{
+            background-color: transparent;
+            border: 0px;
+            text-decoration: none;
+            position:relative; 
+            z-index:2;
+            color:rgb(106, 106, 106);
+            font-size: 21px;
+            transition: .3s all;
+        }
+        
+        .classLikeCards:hover{
+        color: red;
+        font-size:23px;
+        
+        }
+        
+        .classDisLikeCards{
+            background-color: transparent;
+            text-decoration: none;
+            border: 0px;
+            position:relative; 
+            z-index:2;
+            color:red;
+            font-size: 23px;
+            transition: .3s all;
+        }
+        .classDisLikeCards:hover{
+            color: rgb(106, 106, 106);
+            font-size:21px;
+            }
+        
+        .classLikeCardsOff{
+            background-color: transparent;
+            border: 0px;
+            text-decoration: none;
+            position:relative; 
+            z-index:2;
+            color:rgb(106, 106, 106);
+            font-size: 21px;
+            transition: .3s all;
+        }
+        .classLikeCardsOff:hover{
+            color: rgb(106, 106, 106);
+            font-size:23px
+            }
+}
+@media screen and (min-width: 375px){
+    .classCard{
+        color:cyan;
+        background-color: white;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        width: 180px;
+        height: 250px;
+        border-radius: 5px;
+        border: 1px solid rgb(180, 179, 179);
+        transition: background-color .3s, box-shadow .4s, transform .5s;
+        box-shadow: 0px 0px 5px 0.1px rgb(142, 142, 142);
+    }
+    #divImgCard{
+        margin-top: -15px;
+        border-top: 1px solid rgb(180, 179, 179);
+        width: 180.4px;
+        height: 120px;
+    } 
+    .classImgCard{
+        position: static;
+        width: 100%;
+        height: 100%;
+     }
+        .classCardName{
+            text-shadow: 1px 0px 1px black , -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black ;
+            position: relative;
+            top:-9px;
+            font-size: 13px;
+        }
+        #DivCardName{
+            display: flex;
+            position: relative;
+            justify-content: center;
+            top: -1px;
+            background-color:white;
+            width: 180px;
+            border-radius: 20px;
+            border-top-right-radius: 5px;
+            border-top-left-radius: 5px;
+            border: 1px solid rgb(180, 179, 179);
+            height:29px;
+        }
+        .classText{
+            padding: 5px 10px 5px 10px;
+            text-align: center;
+            color: rgb(39, 39, 39);
+            font-size:11px ;
+        }
+
+        .classLikeCards{
+            background-color: transparent;
+            border: 0px;
+            text-decoration: none;
+            position:relative; 
+            z-index:2;
+            color:rgb(106, 106, 106);
+            font-size: 21px;
+            transition: .3s all;
+        }
+        
+        .classLikeCards:hover{
+        color: red;
+        font-size:23px;
+        
+        }
+        
+        .classDisLikeCards{
+            background-color: transparent;
+            text-decoration: none;
+            border: 0px;
+            position:relative; 
+            z-index:2;
+            color:red;
+            font-size: 23px;
+            transition: .3s all;
+        }
+        .classDisLikeCards:hover{
+            color: rgb(106, 106, 106);
+            font-size:21px;
+            }
+        
+        .classLikeCardsOff{
+            background-color: transparent;
+            border: 0px;
+            text-decoration: none;
+            position:relative; 
+            z-index:2;
+            color:rgb(106, 106, 106);
+            font-size: 21px;
+            transition: .3s all;
+        }
+        .classLikeCardsOff:hover{
+            color: rgb(106, 106, 106);
+            font-size:23px
+            }
+}
+@media screen and (min-width: 425px){
+    .classCard{
+        color:cyan;
+        background-color: white;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        width: 180px;
+        height: 250px;
+        border-radius: 5px;
+        border: 1px solid rgb(180, 179, 179);
+        transition: background-color .3s, box-shadow .4s, transform .5s;
+        box-shadow: 0px 0px 5px 0.1px rgb(142, 142, 142);
+    }
+    #divImgCard{
+        margin-top: -15px;
+        border-top: 1px solid rgb(180, 179, 179);
+        width: 180.4px;
+        height: 120px;
+    } 
+    .classImgCard{
+        position: static;
+        width: 100%;
+        height: 100%;
+     }
+        .classCardName{
+            text-shadow: 1px 0px 1px black , -1px 0px 1px black, 0px 1px 1px black, 0px -1px 1px black ;
+            position: relative;
+            top:-9px;
+            font-size: 13px;
+        }
+        #DivCardName{
+            display: flex;
+            position: relative;
+            justify-content: center;
+            top: -1px;
+            background-color:white;
+            width: 180px;
+            border-radius: 20px;
+            border-top-right-radius: 5px;
+            border-top-left-radius: 5px;
+            border: 1px solid rgb(180, 179, 179);
+            height:29px;
+        }
+        .classText{
+            padding: 5px 10px 5px 10px;
+            text-align: center;
+            color: rgb(39, 39, 39);
+            font-size:11px ;
+        }
+
+        .classLikeCards{
+            background-color: transparent;
+            border: 0px;
+            text-decoration: none;
+            position:relative; 
+            z-index:2;
+            color:rgb(106, 106, 106);
+            font-size: 21px;
+            transition: .3s all;
+        }
+        
+        .classLikeCards:hover{
+        color: red;
+        font-size:23px;
+        
+        }
+        
+        .classDisLikeCards{
+            background-color: transparent;
+            text-decoration: none;
+            border: 0px;
+            position:relative; 
+            z-index:2;
+            color:red;
+            font-size: 23px;
+            transition: .3s all;
+        }
+        .classDisLikeCards:hover{
+            color: rgb(106, 106, 106);
+            font-size:21px;
+            }
+        
+        .classLikeCardsOff{
+            background-color: transparent;
+            border: 0px;
+            text-decoration: none;
+            position:relative; 
+            z-index:2;
+            color:rgb(106, 106, 106);
+            font-size: 21px;
+            transition: .3s all;
+        }
+        .classLikeCardsOff:hover{
+            color: rgb(106, 106, 106);
+            font-size:23px
+            }
+}
+@media screen and (min-width: 768px){
+    .classCard{
+        width: 250px;
+        height: 330px;
     }
     #divImgCard{
         margin-top: -15px;
