--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -54,32 +54,30 @@
 
 /*/////////////////////////////////////*/
 
-
-@media screen and (min-width: 768px){
+@media screen and (min-width: 320px){
     #div_id_not_found{
         display: flex;
         position: relative;
-        left: 0px;
+        left: 70px;
         top: 5px;
         flex-direction: column;
         align-items: center;
     }
     #id_not_found{
-        font-size: 30px;
+        font-size: 24px;
     }
     #id_not_found_img{
         position: relative;
-        width: 43%;
-        height: 30%;
+        width: 200px;
+        height: 200px;
         border-radius: 47%;
     }
-
 
     #idDivH1Load{
         display: flex;
         position: relative;
-        left: 205px;
-        top: 150px;
+        left: 110px;
+        top: 50px;
         flex-direction: column;
         align-items: center;
     }
@@ -92,6 +90,145 @@
         padding-left: 30px;
         padding-right:0px ;
         padding-top: 30px;
+        width:65%;
+        height: 300px; 
+        left: 0px;   
+    }
+    #idDivCardsOrigin{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        height: 1950px;
+    }
+    .classCardCards{
+        padding: 7px;
+    }  
+}
+@media screen and (min-width: 375px){
+    #div_id_not_found{
+        display: flex;
+        position: relative;
+        left: 70px;
+        top: 5px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #id_not_found{
+        font-size: 24px;
+    }
+    #id_not_found_img{
+        position: relative;
+        width: 200px;
+        height: 200px;
+        border-radius: 47%;
+    }
+
+    #idDivH1Load{
+        display: flex;
+        position: relative;
+        left: 110px;
+        top: 50px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .classDivCardCards{
+        position: relative;
+        bottom:220px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 30px;
+        padding-right:0px ;
+        padding-top: 30px;
+        width:65%;
+        height: 300px; 
+        left: 0px;   
+    }
+    #idDivCardsOrigin{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        height: 1950px;
+    }
+    .classCardCards{
+        padding: 7px;
+    }  
+}
+@media screen and (min-width: 425px){
+    #div_id_not_found{
+        display: flex;
+        position: relative;
+        left: 70px;
+        top: 5px;
+        flex-direction: column;
+        align-items: center;
+    }
+    #id_not_found{
+        font-size: 24px;
+    }
+    #id_not_found_img{
+        position: relative;
+        width: 200px;
+        height: 200px;
+        border-radius: 47%;
+    }
+
+    #idDivH1Load{
+        display: flex;
+        position: relative;
+        left: 110px;
+        top: 50px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .classDivCardCards{
+        position: relative;
+        bottom:220px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 30px;
+        padding-right:0px ;
+        padding-top: 30px;
+        width: 95%;
+        height: 300px; 
+        left: -20px;   
+    }
+    #idDivCardsOrigin{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        height: 900px;
+    }
+    .classCardCards{
+        padding: 7px;
+    }  
+}
+
+@media screen and (min-width: 768px){
+    #div_id_not_found{
+        left: 0px;
+        top: 5px;
+    }
+    #id_not_found{
+        font-size: 30px;
+    }
+    #id_not_found_img{
+        width: 43%;
+        height: 30%;
+    }
+
+
+    #idDivH1Load{
+        display: flex;
+        position: relative;
+        left: 205px;
+        top: 150px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .classDivCardCards{
+        bottom:220px;
         width: 75%;
         height: 100%; 
         left: 1px;   
@@ -102,11 +239,12 @@
         align-items: center;
         height: 870px;
     }
-    .classCardCards{
-        padding: 10px;
-    }  
 }
 @media screen and (min-width: 1024px) {
+
+    #div_id_not_found{
+        left: 100px;
+    }
     #idDivH1Load{
         display: flex;
         position: relative;
@@ -140,6 +278,14 @@
 
 }
 @media screen and (min-width: 1366px){
+    #id_not_found{
+        font-size: 28px;
+    }
+    #id_not_found_img{
+        width: 43%;
+        height: 25%;
+    }
+
     .classDivCardCards{
     position: relative;
     bottom:240px;
@@ -202,18 +348,11 @@
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
     #id_not_found_img{
-        position: relative;
-        width: 53%;
-        height: 53%;
-        border-radius: 47%;
+        width: 48%;
+        height: 25%;
     }
     #div_id_not_found{
-        display: flex;
-        position: relative;
         left: 225px;
-        top: 5px;
-        flex-direction: column;
-        align-items: center;
     }
      
 }
