--- a/client/src/components/Favorites/Favorites.css
+++ b/client/src/components/Favorites/Favorites.css
@@ -5,8 +5,27 @@
 }
 /*/////////////////////////*/
 
-
-
+@media screen and (min-width: 320px) {
+    .classDivCardsFavorite{
+        position: relative;
+        top: 250px;
+        right: 0px;
+    }
+}
+@media screen and (min-width: 375px) {
+    .classDivCardsFavorite{
+        position: relative;
+        top: 250px;
+        right: 0px;
+    }
+}
+@media screen and (min-width: 425px) {
+    .classDivCardsFavorite{
+        position: relative;
+        top: 250px;
+        right: 0px;
+    }
+}
 @media screen and (min-width: 768px) {
     .classDivCardsFavorite{
         position: relative;
