--- a/client/src/components/Filter/Filter.css
+++ b/client/src/components/Filter/Filter.css
@@ -31,15 +31,83 @@ height: 50px;
 /*////////////////////////////////*/
 
 
-@media screen and (min-width: 768px){
+
+@media screen and (min-width: 320px){
     .classDivFilterOrigin{
         display: flex;
         flex-direction: row;
         position: relative;
-        left: 55px;
-        top: 35px;
-        width: 170px;
-        height: 310px;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: center;
+        left: 6px;
+        top: 55px;
+        width: 95%;
+        height: 350px;
+    }
+    .classSelectFilt{
+        background-color: black;  
+        color: cyan;
+        border-radius: 15px;
+        font-size: 10px;
+        width: 140px;
+        height: 20px;
+    }
+    .classDivFilter{
+        padding-left:10px;
+        width: 140px;
+        height: 35px;
+        }
+        .classOptionFilt{
+            background-color: rgb(9, 215, 215);
+            color: black;
+            font-size: 11px;
+        }
+}
+@media screen and (min-width: 375px){
+    .classDivFilterOrigin{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: center;
+        left: 6px;
+        top: 55px;
+        width: 95%;
+        height: 350px;
+    }
+    .classSelectFilt{
+        background-color: black;  
+        color: cyan;
+        border-radius: 15px;
+        font-size: 11px;
+        width: 150px;
+        height: 20px;
+    }
+    .classDivFilter{
+        padding-left:10px;
+        width: 160px;
+        height: 40px;
+        }
+        .classOptionFilt{
+            background-color: rgb(9, 215, 215);
+            color: black;
+            font-size: 11px;
+        }
+}
+@media screen and (min-width: 425px){
+    .classDivFilterOrigin{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: center;
+        left: 0px;
+        top: 55px;
+        width: 95%;
+        height: 350px;
     }
     .classSelectFilt{
         background-color: black;  
@@ -59,6 +127,19 @@ height: 50px;
             color: black;
             font-size: 11px;
         }
+}
+@media screen and (min-width: 768px){
+    .classDivFilterOrigin{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        left: 55px;
+        top: 35px;
+        width: 10px;
+        height: 310px;
+    }
     }
 @media screen and (min-width: 1024px) {
     .classDivFilterOrigin{
