--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -90,92 +90,269 @@ background-color:rgb(239, 239, 239);
 
 /*////////////////////////////*/
 
-
-@media screen and (min-width: 375px) {
-        .classH3{
-            font-weight: 600;
-            margin: 4px;
-            font-size: 17px;
-            color: rgb(53, 50, 50);
-        }
-        .classDivButton{
-            height: 25px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 10px;
-            width: 110px;
-            transition: all .5s;
-        }
-        .classDivButton,.classButton2:hover{
-            font-size: 17.3px;
-            color:rgb(12, 213, 213);
-        }
-        .classDivButton,.classButton1:hover{
-            color:rgb(12, 213, 213);
-            font-size: 17.3px;
-        }
-        .classBtnPage{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 10px;
-            margin-top: 30px;
-            margin-bottom: 10px;
-            width: 600px;
-            height: 80px;
-            position: relative;
-            left: 300px;
-
-        }
-        .classButton1{
-            position: relative;
-            left: 7px;
-            border: 0px solid transparent;
-            margin: 10px;
-            padding-right: 8px;
-            padding-left: 25px;
-            font-size: 45px;
-            font-weight: 500;
-            transition: color .2s, font-size .3s;
-        }
-        .classButton2{
-            position: relative;
-            left: 5px;
-            border: 0px solid transparent;
-            margin: 10px;
-            padding-left: 7px;
-            padding-right: 22px;
-            font-size: 45px;
-            font-weight: 500;
-            transition: color .2s, font-size .3s, ;
-        }
-        .classFlechaBtn1{
-            position: relative;
-            right: 87px;
-            color: rgb(239, 239, 239);
-            border-top: 2px solid rgb(10, 180, 180);
-            border-right: 0px solid transparent;
-            border-left: 2px solid rgb(0, 241, 241);
-            border-bottom: 0px solid transparent;
-            height: 14px;
-            width: 14px;
-            transform: rotate(315deg);
-            transition: all 0.4s;
-        }
-        .classFlechaBtn2{
-            position: relative;
-            right: 25px;
-            color: rgb(239, 239, 239);
-            width: 15px;
-            border-top: 2px solid rgb(0, 241, 241);
-            border-right: 2px solid rgb(10, 180, 180);
-            border-left: 0px solid white;
-            border-bottom: 0px solid white;
-            height: 14px;
-            transform: rotate(45deg);
-            transition: all 0.4s;
-        }
+@media screen and (min-width: 320px){
+    .classBtnPage{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 99%;
+        height: 50px;
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+    .classH3{
+        font-weight: 600;
+        margin: 4px;
+        font-size: 12px;
+        color: rgb(53, 50, 50);
+    }
+    .classDivButton{
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+        width: 110px;
+        transition: all .5s;
+    }
+    .classButton1{
+        position: relative;
+        left: 7px;
+        border: 0px solid transparent;
+        margin: 10px;
+        padding-right: 8px;
+        padding-left: 25px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: color .2s, font-size .3s;
+    }
+    .classButton2{
+        position: relative;
+        left: 5px;
+        border: 0px solid transparent;
+        margin: 10px;
+        padding-left: 7px;
+        padding-right: 22px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: color .2s, font-size .3s, ;
+    }
+    .classDivButton,.classButton2:hover{
+        font-size: 13px;
+        color:rgb(12, 213, 213);
+    }
+    .classDivButton,.classButton1:hover{
+        color:rgb(12, 213, 213);
+        font-size: 13px;
+    }
+    .classFlechaBtn1{
+        position: relative;
+        right: 78px;
+        color: rgb(239, 239, 239);
+        border-top: 2px solid rgb(10, 180, 180);
+        border-right: 0px solid transparent;
+        border-left: 2px solid rgb(0, 241, 241);
+        border-bottom: 0px solid transparent;
+        height: 12px;
+        width: 12px;
+        background: transparent;
+        transform: rotate(315deg);
+        transition: all 0.4s;
+    }
+    .classFlechaBtn2{
+        position: relative;
+        right: 25px;
+        color: rgb(239, 239, 239);
+        width: 12px;
+        border-top: 2px solid rgb(0, 241, 241);
+        border-right: 2px solid rgb(10, 180, 180);
+        border-left: 0px solid transparent;
+        border-bottom: 0px solid transparent;
+        height: 12px;
+        background: transparent;
+        transform: rotate(45deg);
+        transition: all 0.4s;
+    }
+}
+@media screen and (min-width: 375px){
+    .classBtnPage{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 99%;
+        height: 50px;
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+    .classH3{
+        font-weight: 600;
+        margin: 4px;
+        font-size: 12px;
+        color: rgb(53, 50, 50);
+    }
+    .classDivButton{
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+        width: 110px;
+        transition: all .5s;
+    }
+    .classButton1{
+        position: relative;
+        left: 7px;
+        border: 0px solid transparent;
+        margin: 10px;
+        padding-right: 8px;
+        padding-left: 25px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: color .2s, font-size .3s;
+    }
+    .classButton2{
+        position: relative;
+        left: 5px;
+        border: 0px solid transparent;
+        margin: 10px;
+        padding-left: 7px;
+        padding-right: 22px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: color .2s, font-size .3s, ;
+    }
+    .classDivButton,.classButton2:hover{
+        font-size: 13px;
+        color:rgb(12, 213, 213);
+    }
+    .classDivButton,.classButton1:hover{
+        color:rgb(12, 213, 213);
+        font-size: 13px;
+    }
+    .classFlechaBtn1{
+        position: relative;
+        right: 78px;
+        color: rgb(239, 239, 239);
+        border-top: 2px solid rgb(10, 180, 180);
+        border-right: 0px solid transparent;
+        border-left: 2px solid rgb(0, 241, 241);
+        border-bottom: 0px solid transparent;
+        height: 12px;
+        width: 12px;
+        background: transparent;
+        transform: rotate(315deg);
+        transition: all 0.4s;
+    }
+    .classFlechaBtn2{
+        position: relative;
+        right: 25px;
+        color: rgb(239, 239, 239);
+        width: 12px;
+        border-top: 2px solid rgb(0, 241, 241);
+        border-right: 2px solid rgb(10, 180, 180);
+        border-left: 0px solid transparent;
+        border-bottom: 0px solid transparent;
+        height: 12px;
+        background: transparent;
+        transform: rotate(45deg);
+        transition: all 0.4s;
+    }
+}
+@media screen and (min-width: 425px){
+    .classBtnPage{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 99%;
+        height: 50px;
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+    .classH3{
+        font-weight: 600;
+        margin: 4px;
+        font-size: 12px;
+        color: rgb(53, 50, 50);
+    }
+    .classDivButton{
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+        width: 110px;
+        transition: all .5s;
+    }
+    .classButton1{
+        position: relative;
+        left: 7px;
+        border: 0px solid transparent;
+        margin: 10px;
+        padding-right: 8px;
+        padding-left: 25px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: color .2s, font-size .3s;
+    }
+    .classButton2{
+        position: relative;
+        left: 5px;
+        border: 0px solid transparent;
+        margin: 10px;
+        padding-left: 7px;
+        padding-right: 22px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: color .2s, font-size .3s, ;
+    }
+    .classDivButton,.classButton2:hover{
+        font-size: 13px;
+        color:rgb(12, 213, 213);
+    }
+    .classDivButton,.classButton1:hover{
+        color:rgb(12, 213, 213);
+        font-size: 13px;
+    }
+    .classFlechaBtn1{
+        position: relative;
+        right: 78px;
+        color: rgb(239, 239, 239);
+        border-top: 2px solid rgb(10, 180, 180);
+        border-right: 0px solid transparent;
+        border-left: 2px solid rgb(0, 241, 241);
+        border-bottom: 0px solid transparent;
+        height: 12px;
+        width: 12px;
+        background: transparent;
+        transform: rotate(315deg);
+        transition: all 0.4s;
+    }
+    .classFlechaBtn2{
+        position: relative;
+        right: 25px;
+        color: rgb(239, 239, 239);
+        width: 12px;
+        border-top: 2px solid rgb(0, 241, 241);
+        border-right: 2px solid rgb(10, 180, 180);
+        border-left: 0px solid transparent;
+        border-bottom: 0px solid transparent;
+        height: 12px;
+        background: transparent;
+        transform: rotate(45deg);
+        transition: all 0.4s;
+    }
 }
 @media screen and (min-width: 768px) {
     .classBtnPage{
