--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -84,7 +84,104 @@ color: black
 
 /*/////// ////// */
 
-@media screen and (min-width: 360px) {
+@media screen and (min-width: 320px) {
+        .classUlNav2{
+            margin:0px 10px 0px 10px;
+            width: 5%;
+            height: 100%;
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+        }
+        .classDivUlNav2{
+        display: flex;
+        height: 100px;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        }
+        .classliPi{
+            position: relative;
+            font-size: 11px;
+            font-weight: 500;
+            border: 1px solid gray;
+            border-radius: 15px;
+            background-color:black ;
+            padding: 3px 8px 5px 8px;
+            margin-top: 3px;
+            transition: font-size .5s, background-color .3s;
+        }
+        .classliPi:hover{
+            border: 2px solid rgb(0, 203, 203);
+            background-color: cyan;
+            font-size: 12px;
+        }
+        
+        .classliPiUser{
+            position: relative;
+            font-size: 11px;
+            font-weight: 500;
+            border: 1px solid gray;
+            border-radius: 15px;
+            background-color:rgb(77, 77, 77) ;
+            padding: 3px 8px 5px 8px;
+            margin-top: 3px;
+            transition: font-size .5s, background-color .3s;
+        }
+        .linkToLi{
+            color: rgb(0, 241, 241);
+            text-decoration: none;
+            transition: color .5s;
+        }
+        .linkToLi:hover{
+        color: black
+        }
+        
+        #idH1Nav{
+            text-align: center;
+            position: relative;
+            top: -106px;
+            left: 100px;
+            text-shadow: 1px 1px grey;
+            font-size: 25px;
+            font-weight: bolder;
+            width: 150px;
+
+        }
+        #idNav{
+            display: flex;
+            align-items: center;
+            flex-direction: column-reverse;
+        }
+        #idHeader{
+            border-radius: 0px 0px 50px 50px;
+            border-left: 1px solid rgb(0, 203, 203);
+            border-right:1px solid rgb(0, 203, 203) ;
+            border-bottom:1px solid rgb(0, 203, 203);
+            background-color:rgb(0, 241, 241);
+            width: 100%;
+            height: 100px;
+        }
+        #idSearchNav{
+            height: 30px;
+            width: 92%;
+            left: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            top: -98px;
+            
+
+        }
+   
+    }
+@media screen and (min-width: 375px) {
     #idUlNav{
         list-style: none;
         }
@@ -182,6 +279,101 @@ color: black
             
 
         }
+   
+    }
+@media screen and (min-width: 425px) {
+     .classUlNav2{
+            margin:0px 10px 0px 10px;
+            width: 5%;
+            height: 100%;
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            }
+            .classDivUlNav2{
+            display: flex;
+            height: 100px;
+            width: 358px;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: row-reverse;
+            flex-wrap: wrap;
+            }
+            .classliPi{
+                position: relative;
+                font-size: 11px;
+                font-weight: 500;
+                border: 1px solid gray;
+                border-radius: 15px;
+                background-color:black ;
+                padding: 3px 8px 5px 8px;
+                margin-top: 3px;
+                transition: font-size .5s, background-color .3s;
+            }
+            .classliPi:hover{
+                border: 2px solid rgb(0, 203, 203);
+                background-color: cyan;
+                font-size: 12px;
+            }
+            
+            .classliPiUser{
+                position: relative;
+                font-size: 11px;
+                font-weight: 500;
+                border: 1px solid gray;
+                border-radius: 15px;
+                background-color:rgb(77, 77, 77) ;
+                padding: 3px 8px 5px 8px;
+                margin-top: 3px;
+                transition: font-size .5s, background-color .3s;
+            }
+            .linkToLi{
+                color: rgb(0, 241, 241);
+                text-decoration: none;
+                transition: color .5s;
+            }
+            .linkToLi:hover{
+            color: black
+            }
+            
+            #idH1Nav{
+                text-align: center;
+                position: relative;
+                top: -106px;
+                left: 94px;
+                text-shadow: 1px 1px grey;
+                font-size: 25px;
+                font-weight: bolder;
+                width: 150px;
+    
+            }
+            #idNav{
+                display: flex;
+                align-items: center;
+                flex-direction: column-reverse;
+            }
+            #idHeader{
+                border-radius: 0px 0px 50px 50px;
+                border-left: 1px solid rgb(0, 203, 203);
+                border-right:1px solid rgb(0, 203, 203) ;
+                border-bottom:1px solid rgb(0, 203, 203);
+                background-color:rgb(0, 241, 241);
+                width: 100%;
+                height: 100px;
+            }
+            #idSearchNav{
+                height: 30px;
+                width: 92%;
+                left: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                top: -98px;
+            }           
     }
 @media screen and (min-width: 768px) {
     .classUlNav2{
